Add constrained compilation mode
Some implementations in SIMDe can get quite large, especially when a
large function has an immediate-mode parameter which then calls another
function with an immediate-mode parameter.  Since, by default,
everything in SIMDe gets inlined this can lead to significant compile-
time overhead.

To work around this, this patch adds a SIMDE_HUGE_FUNCTION_ATTRIBUTES
macro to use with such functions in place of the normal
SIMDE_FUNCTION_ATTRIBUTES macro.  If you then define
SIMDE_CONSTRAINED_COMPILATION prior to including SIMDe, SIMDe will
*not* always inline such functions.  The compiler may still inline them
but that decision is left up to the compiler.

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,9 +28,9 @@ blocks:
             - ninja -C build coverage-xml
           env_vars:
             - name: CFLAGS
-              value: '-Wextra -Werror -march=native'
+              value: -Wextra -Werror -march=native -DSIMDE_CONSTRAINED_COMPILATION
             - name: CXXFLAGS
-              value: '-Wextra -Werror -march=native'
+              value: -Wextra -Werror -march=native -DSIMDE_CONSTRAINED_COMPILATION
 
         - name: clang
           matrix:
@@ -50,6 +50,6 @@ blocks:
             - ninja -C build coverage-xml
           env_vars:
             - name: CFLAGS
-              value: -Weverything -Werror -march=native
+              value: -Weverything -Werror -march=native -DSIMDE_CONSTRAINED_COMPILATION
             - name: CXXFLAGS
-              value: -Weverything -Werror -march=native
+              value: -Weverything -Werror -march=native -DSIMDE_CONSTRAINED_COMPILATION
