Remove all `&& 0`s in preprocessor macros.
This also adds a formatting check to CI to make sure we (okay, I) don't
accidentally re-introduce any.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,8 @@ jobs:
     # Check indentation of preprocessor directives.
     - name: Preprocessor directive indentation
       run: find simde/*/ -name 'avx*.h' -exec pcre2grep -M '{\n#' {} + && exit 1 || exit 0
+    - name: Stray `&& 0`
+      run: git grep ' && 0' simde/ test/ && exit 1 || exit 0
 
   x86:
     runs-on: ubuntu-latest
