--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-mcpu=power9 -Weverything -Werror"
+    - CXXFLAGS="-mcpu=power9 -Weverything -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -26,8 +26,8 @@ jobs:
     env:
     - CC="gcc"
     - CXX="g++"
-    - CFLAGS="-march=native -mzvector -Wextra -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-march=native -mzvector -Wextra -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-march=native -mzvector -Wextra -Werror"
+    - CXXFLAGS="-march=native -mzvector -Wextra -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip gcc g++
@@ -41,7 +41,7 @@ install:
 
 script:
 - meson setup build -Db_coverage=true
-- ninja -C build -v -j 6
+- ninja -C build -v
 
 after_success:
 - meson test -C build --print-errorlogs
