--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ jobs:
     env:
     - CC="gcc"
     - CXX="g++"
-    - CFLAGS="-march=native -mzvector -Wextra -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-march=native -mzvector -Wextra -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-march=native -mzvector -Wextra -Werror"
+    - CXXFLAGS="-march=native -mzvector -Wextra -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip gcc g++
@@ -26,8 +26,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-mcpu=power9 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-mcpu=power9 -Weverything -Werror"
+    - CXXFLAGS="-mcpu=power9 -Weverything -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -40,8 +40,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power8 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-mcpu=power8 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-mcpu=power8 -Weverything -Werror"
+    - CXXFLAGS="-mcpu=power8 -Weverything -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -54,8 +54,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power7 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-mcpu=power7 -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-mcpu=power7 -Weverything -Werror"
+    - CXXFLAGS="-mcpu=power7 -Weverything -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -68,8 +68,8 @@ jobs:
     env:
     - CC="clang"
     - CXX="clang++"
-    - CFLAGS="-mcpu=power6 -maltivec -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
-    - CXXFLAGS="-mcpu=power6 -maltivec -Weverything -Werror -DSIMDE_CONSTRAINED_COMPILATION"
+    - CFLAGS="-mcpu=power6 -maltivec -Weverything -Werror"
+    - CXXFLAGS="-mcpu=power6 -maltivec -Weverything -Werror"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -83,7 +83,7 @@ install:
 
 script:
 - meson setup build -Db_coverage=true
-- ninja -C build -v -j 6
+- ninja -C build -v
 - meson test -C build --print-errorlogs
 
 notifications:
