--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ jobs:
     - CXX="clang++"
     - CFLAGS="-mcpu=power9 -Weverything -Werror"
     - CXXFLAGS="-mcpu=power9 -Weverything -Werror"
+    - JOBS="$(expr $(nproc) / 2)"
     addons:
       apt:
         packages: ninja-build python3-pip clang
@@ -28,6 +29,7 @@ jobs:
     - CXX="g++"
     - CFLAGS="-march=native -mzvector -Wextra -Werror"
     - CXXFLAGS="-march=native -mzvector -Wextra -Werror"
+    - JOBS="$(nproc)"
     addons:
       apt:
         packages: ninja-build python3-pip gcc g++
@@ -41,7 +43,7 @@ install:
 
 script:
 - meson setup build -Db_coverage=true
-- ninja -C build -v
+- ninja -C build -v -j${JOBS}
 
 after_success:
 - meson test -C build --print-errorlogs
