relaxed-simd: initial support for the WASM relaxed SIMD proposal
The proposal is still *very much* a work in progress; we're getting an
early start here. The names will probably change, functionality will
change, etc.

This is intended to be a testbed to help with development of the
proposal.

--- a/meson.build
+++ b/meson.build
@@ -381,6 +381,7 @@ if not meson.is_subproject()
   install_headers(
     files([
       'simde/wasm/simd128.h',
+      'simde/wasm/relaxed-simd.h',
       ]),
     subdir: 'simde/wasm')
 
