--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -108,15 +108,19 @@ aux_source_directory("x86" X86_SOURCES_C)
 list(REMOVE_ITEM X86_SOURCES_C "x86/skel.c")
 list(REMOVE_ITEM X86_SOURCES_C "x86/run-tests.c")
 
-aux_source_directory("wasm/simd128" WASM_SOURCES_C)
-list(REMOVE_ITEM WASM_SOURCES_C "wasm/simd128/run-tests.c")
+aux_source_directory("wasm/simd128" WASM_SIMD128_SOURCES_C)
+list(REMOVE_ITEM WASM_SIMD128_SOURCES_C "wasm/simd128/run-tests.c")
+
+aux_source_directory("wasm/relaxed-simd" WASM_SIMD128_SOURCES_C)
+list(REMOVE_ITEM WASM_SIMD128_SOURCES_C "wasm/relaxed-simd/run-tests.c")
 
 set(TEST_SOURCES_C
   ${X86_SOURCES_C}
   ${X86_AVX512_SOURCES_C}
   ${ARM_NEON_SOURCES_C}
   ${ARM_SVE_SOURCES_C}
-  ${WASM_SOURCES_C})
+  ${WASM_SIMD128_SOURCES_C}
+  ${WASM_RELAXED_SIMD_SOURCES_C})
 
 set(TEST_RUNNER_SOURCES
   run-tests.c
@@ -126,7 +130,8 @@ set(TEST_RUNNER_SOURCES
   arm/neon/run-tests.c
   arm/sve/run-tests.c
   wasm/run-tests.c
-  wasm/simd128/run-tests.c)
+  wasm/simd128/run-tests.c
+  wasm/relaxed-simd/run-tests.c)
 add_executable(run-tests ${TEST_RUNNER_SOURCES})
 set_property(TARGET run-tests PROPERTY C_STANDARD "99")
 target_add_compiler_flags(run-tests "-Wno-psabi")
