stop testing Longsoon for now

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,27 +38,27 @@ jobs:
       - run: ninja -C build -v -j 3
       - run: ninja -C build -v test
 
-  loongson:
-    docker:
-      - image: debian:testing-slim
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
-    environment:
-      CC: mips64el-linux-gnuabi64-gcc
-      CXX: mips64el-linux-gnuabi64-g++
-      CFLAGS: -Wextra -Werror
-      CXXFLAGS: -Wextra -Werror
-    steps:
-      - checkout
-      - run: cat /proc/cpuinfo /proc/meminfo
-      - run: dpkg --add-architecture mips64el
-      - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
-      - run: apt-get install -y gcc-mips64el-linux-gnuabi64 g++-mips64el-linux-gnuabi64 qemu-user-static libc6-dev:mips64el libstdc++6:mips64el
-      - run: pip3 install meson
-      - run: /usr/local/bin/meson setup build -Db_coverage=true --cross-file=docker/cross-files/loongson-gcc.cross
-      - run: ninja -C build -v -j 3
-      # - run: ninja -C build -v -j 3 test
+  # loongson:
+  #   docker:
+  #     - image: debian:testing-slim
+  #       auth:
+  #         username: $DOCKERHUB_USERNAME
+  #         password: $DOCKERHUB_PASSWORD
+  #   environment:
+  #     CC: mips64el-linux-gnuabi64-gcc
+  #     CXX: mips64el-linux-gnuabi64-g++
+  #     CFLAGS: -Wextra -Werror
+  #     CXXFLAGS: -Wextra -Werror
+  #   steps:
+  #     - checkout
+  #     - run: cat /proc/cpuinfo /proc/meminfo
+  #     - run: dpkg --add-architecture mips64el
+  #     - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
+  #     - run: apt-get install -y gcc-mips64el-linux-gnuabi64 g++-mips64el-linux-gnuabi64 qemu-user-static libc6-dev:mips64el libstdc++6:mips64el
+  #     - run: pip3 install meson
+  #     - run: /usr/local/bin/meson setup build -Db_coverage=true --cross-file=docker/cross-files/loongson-gcc.cross
+  #     - run: ninja -C build -v -j 3
+  #     # - run: ninja -C build -v -j 3 test
 
   i686:
     docker:
@@ -101,12 +101,12 @@ workflows:
               ignore:
               - master
               - /^ci/(?!circleci).*$/
-      - loongson:
-          filters:
-            branches:
-              ignore:
-              - master
-              - /^ci/(?!circleci).*$/
+      # - loongson:
+      #     filters:
+      #       branches:
+      #         ignore:
+      #         - master
+      #         - /^ci/(?!circleci).*$/
       - i686:
           filters:
             branches:
