--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -371,8 +371,8 @@ jobs:
     env:
       CC: /home/runner/.local/bin/icx
       CXX: /home/runner/.local/bin/icpx
-      CFLAGS: -Werror -wd13200 -wd13203 -wd16219 -Wall -Werror -march=native
-      CXXFLAGS: -wd13200 -wd13203 -wd16219 -Wall -Werror -march=native
+      CFLAGS: -Wall -Werror -march=native -wno-tautological-constant-compare
+      CXXFLAGS: -Wall -Werror -march=native -wno-tautological-constant-compare
     steps:
     - uses: actions/checkout@v2
     - name: CPU Information
