--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -334,13 +334,13 @@ jobs:
       run: ctest -C test/build ---output-on-failure
 
   macos:
-    runs-on: macos-10.15
+    runs-on: macos-11
     strategy:
       matrix:
         # https://www.jessesquires.com/blog/2020/01/06/selecting-an-xcode-version-on-github-ci/
         # https://github.com/actions/virtual-environments/blob/master/images/macos/macos-10.15-Readme.md#xcode
-        xcode: ["11.3.1", "11.7", "12.3", "12.4"]
-        # xcode: ["11.7", "12.4", "12.5.1"] # for macos-11
+        # xcode: ["11.3.1", "11.7", "12.3", "12.4"]
+        xcode: ["11.7", "12.4", "12.5.1"] # for macos-11
     env:
       DEVELOPER_DIR:  /Applications/Xcode_${{ matrix.xcode }}.app
     steps:
