CI: GitHub Actions: test with gcc-12

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,6 +241,12 @@ jobs:
         - version: 11
           distro: ubuntu-22.04
           arch_flags: -ffast-math
+        - version: 12
+          distro: ubuntu-22.04
+          arch_flags: -march=native
+        - version: 12
+          distro: ubuntu-22.04
+          arch_flags: -ffast-math
     runs-on: ${{ matrix.distro }}
     env:
       CC: gcc-${{ matrix.version }}
