--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -272,16 +272,26 @@ jobs:
     - name: Test
       run: ctest -C test/build ---output-on-failure
 
-  gcc-aarch64:
+  gcc-qemu:
     strategy:
       matrix:
         include:
         - version: 12
           distro: ubuntu-22.04
-          arch_flags: -march=armv8-a+simd+crypto+crc
-        - version: 12
-          distro: ubuntu-22.04
-          arch_flags: -ffast-math
+          cross: aarch64
+          arch_gnu: aarch64
+          arch_deb: arm64
+        # - version: 12
+        #   distro: ubuntu-22.04
+        #   cross: power9
+        #   arch_gnu: powerpc64le
+        #   arch_deb: ppc64el
+        # - version: 12
+        #   distro: ubuntu-22.04
+        #   cross: s390x
+        #   arch_gnu: s390x
+        #   arch_deb: s390x
+
     runs-on: ${{ matrix.distro }}
     steps:
     - uses: actions/checkout@v3
@@ -294,11 +304,11 @@ jobs:
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test
         sudo apt-get update -y
         sudo apt-get -yq install ninja-build parallel \
-          gcc-${{ matrix.version }}-aarch64-linux-gnu \
-          g++-${{ matrix.version }}-aarch64-linux-gnu binfmt-support \
-          qemu-user-static meson libc6-arm64-cross libstdc++-${{ matrix.version }}-dev-arm64-cross
+          gcc-${{ matrix.version }}-${{ matrix.arch_gnu }}-linux-gnu \
+          g++-${{ matrix.version }}-${{ matrix.arch_gnu }}-linux-gnu binfmt-support \
+          qemu-user-static meson libc6-${{ matrix.arch_deb }}-cross libstdc++-${{ matrix.version }}-dev-${{ matrix.arch_deb }}-cross
     - name: Configure
-      run: meson setup --cross-file=docker/cross-files/aarch64-gcc-${{ matrix.version }}.cross build
+      run: meson setup --cross-file=docker/cross-files/${{ matrix.cross }}-gcc-${{ matrix.version }}.cross build
     - name: Build
       run: ninja -C build -v
     - name: Test
