--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,8 +99,13 @@ jobs:
         submodules: recursive
     - name: CPU Information
       run: cat /proc/cpuinfo
+    - run: sudo apt-get update
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ${{ github.job }}-${{ matrix.isax }}
     - name: Install APT Dependencies
-      run: sudo apt-get update && sudo apt-get install -y ninja-build ninja-build meson parallel gcovr
+      run: sudo apt-get install -y ninja-build ninja-build meson parallel gcovr
     - name: Configure
       run: meson setup build -Db_coverage=true
     - name: Build
@@ -188,10 +193,15 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+    - run: sudo apt-get update
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ${{ github.job }}
     - name: CPU Information
       run: cat /proc/cpuinfo
     - name: Install APT Dependencies
-      run: sudo apt-get update && sudo apt-get install -y ninja-build ninja-build meson parallel gcovr libsleef-dev
+      run: sudo apt-get install -y ninja-build ninja-build meson parallel gcovr libsleef-dev
     - name: Configure
       run: meson setup build -Dsleef=enabled -Db_coverage=true
     - name: Build
@@ -308,6 +318,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+    - run: sudo apt-get update
     - name: CPU Information
       run: cat /proc/cpuinfo
     - name: Install APT Dependencies
@@ -318,8 +329,15 @@ jobs:
           gcc-${{ matrix.version }}-${{ matrix.arch_gnu }}-linux-gnu \
           g++-${{ matrix.version }}-${{ matrix.arch_gnu }}-linux-gnu binfmt-support \
           qemu-user-static meson libc6-${{ matrix.arch_deb }}-cross libstdc++-${{ matrix.version }}-dev-${{ matrix.arch_deb }}-cross
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ${{ github.job }}-${{ matrix.distro }}-${{ matrix.cross }}
+    - name: add ccache to the build path
+      run: |
+        export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
     - name: Configure
-      run: meson setup --cross-file=docker/cross-files/${{ matrix.cross }}-gcc-${{ matrix.version }}.cross build
+      run: meson setup --cross-file=docker/cross-files/${{ matrix.cross }}-gcc-${{ matrix.version }}-ccache.cross build
     - name: Build
       run: ninja -C build -v
     - name: Test
@@ -421,10 +439,14 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
-    - name: System Information
-      run: system_profiler
+    # - name: System Information
+    #   run: system_profiler
     - name: Compiler version
       run: cc --version
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+      with:
+        key: ${{ github.job }}-${{ matrix.xcode }}
     - name: Install Homebrew Dependencies
       run: brew install meson ninja gcovr
     - name: Configure
