--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 jobs:
   gcc:
+    resource_class: large
     docker:
       - image: debian:testing-slim
         auth:
@@ -10,16 +11,16 @@ jobs:
       CFLAGS: -Wextra -Werror -march=native
       CXXFLAGS: -Wextra -Werror -march=native
     steps:
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr gcc g++
       - checkout
       - run: cat /proc/cpuinfo /proc/meminfo
-      - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
-      - run: apt-get install -y gcc g++
       - run: pip3 install meson
       - run: CC=gcc CXX=g++ CFLAGS=-Wno-error=stringop-overread CXXFLAGS=-Wno-error=stringop-overread /usr/local/bin/meson setup build -Db_coverage=true
-      - run: ninja -C build -v -j 3
+      - run: ninja -C build -v -j 5
       - run: ninja -C build -v test
 
   clang:
+    resource_class: large
     docker:
       - image: debian:testing-slim
         auth:
@@ -29,16 +30,16 @@ jobs:
       CFLAGS: -Weverything -Werror -march=native
       CXXFLAGS: -Weverything -Werror -march=native
     steps:
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr clang
       - checkout
       - run: cat /proc/cpuinfo /proc/meminfo
-      - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
-      - run: apt-get install -y clang
       - run: pip3 install meson
       - run: CC=clang CXX=clang++ /usr/local/bin/meson setup build -Db_coverage=true
-      - run: ninja -C build -v -j 3
+      - run: ninja -C build -v -j 5
       - run: ninja -C build -v test
 
   loongson:
+    resource_class: large
     docker:
       - image: debian:testing-slim
         auth:
@@ -50,17 +51,16 @@ jobs:
       CFLAGS: -Wextra -Werror
       CXXFLAGS: -Wextra -Werror
     steps:
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr gcc-mips64el-linux-gnuabi64 g++-mips64el-linux-gnuabi64 qemu-user-static libc6-mips64el-cross
       - checkout
       - run: cat /proc/cpuinfo /proc/meminfo
-      - run: dpkg --add-architecture mips64el
-      - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
-      - run: apt-get install -y gcc-mips64el-linux-gnuabi64 g++-mips64el-linux-gnuabi64 qemu-user-static libc6:mips64el libstdc++6:mips64el
       - run: pip3 install meson
       - run: /usr/local/bin/meson setup build -Db_coverage=true --cross-file=docker/cross-files/loongson-gcc.cross
-      - run: ninja -C build -v -j 3
+      - run: ninja -C build -v -j 5
       # - run: ninja -C build -v -j 3 test
 
   i686:
+    resource_class: large
     docker:
       - image: debian:testing-slim
         auth:
@@ -70,19 +70,14 @@ jobs:
       CFLAGS: -Wextra -Werror -march=native
       CXXFLAGS: -Wextra -Werror -march=native
     steps:
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-i686-linux-gnu libc6-i386-cross
       - checkout
       - run:
           name: System Information
           command: cat /proc/cpuinfo /proc/meminfo
-      - run:
-          name: Install architecture
-          command: |
-            dpkg --add-architecture i386
-      - run: apt-get update && apt-get install -y ninja-build ninja-build python3-pip python3-setuptools python3-wheel gcovr
-      - run: apt-get install -y {gcc,g++}-i686-linux-gnu libc6-dev:i386
       - run: pip3 install meson
-      - run: CC=x86_64-linux-gnu-gcc CXX=x86_64-linux-gnu-g++ CFLAGS=-Wno-error=stringop-overread CXXFLAGS=-Wno-error=stringop-overread /usr/local/bin/meson setup build -Db_coverage=true
-      - run: ninja -C build -v -j 3
+      - run: CC=x86_64-linux-gnu-gcc CXX=x86_64-linux-gnu-g++ /usr/local/bin/meson setup build -Db_coverage=true
+      - run: ninja -C build -v -j 5
       - run: ninja -C build -v test
 
 workflows:
