--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,6 +80,28 @@ jobs:
       - run: ninja -C build -v -j 5
       - run: ninja -C build -v test
 
+  i686-gcc11-O2:
+    resource_class: large
+    docker:
+      - image: debian:testing-slim
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
+    environment:
+      CFLAGS: -Wextra -Werror -O2
+      CXXFLAGS: -Wextra -Werror -O2
+    steps:
+      - run: apt-get update && apt-get install -y git ssh ninja-build python3-pip python3-setuptools python3-wheel gcovr {gcc,g++}-i686-linux-gnu libc6-i386-cross
+      - checkout
+      - run:
+          name: System Information
+          command: cat /proc/cpuinfo /proc/meminfo
+      - run: pip3 install meson
+      - run: CC=x86_64-linux-gnu-gcc-11 CXX=x86_64-linux-gnu-g++-11 /usr/local/bin/meson setup build -Db_coverage=true
+      - run: ninja -C build -v -j 3
+      - run: ninja -C build -v test
+
+
 workflows:
   version: 2
   test:
@@ -103,6 +125,12 @@ workflows:
               - master
               - /^ci/(?!circleci).*$/
       - i686:
+          filters:
+            branches:
+              ignore:
+              - master
+              - /^ci/(?!circleci).*$/
+      - i686-gcc11-O2:
           filters:
             branches:
               ignore:
